--- a/styles.css
+++ b/styles.css
@@ -36,10 +36,18 @@ li {
     text-align: left;   
 }
 
+.center {
+    text-align: center;
+    margin: 0 auto;
+    width: 100%;
+}
+
 button, .btn {
     font-weight: bold;
     font-size: 5em;
     text-align: center;
+    width: 60%;
+    margin: auto;
 }
 
 img {
@@ -56,6 +64,10 @@ img {
     margin: 2em auto;
     padding: .75em;
     overflow-wrap: break-word;
+}
+
+.panel p {
+    text-align: left;
 }
 
 nav, .nav {
