--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Playfair+Display:ital,wght@1,700&family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500&family=Oswald&display=swap');
+
 
 body {
     width: 100%;
-    background-color: #0B090A;
+    background-color: #F7F3EF;
     margin: 0;
 }
 
 h1 {
-    font-size: 7em;
     text-transform: uppercase;
     font-family: 'Playfair Display', serif;
-    color: #D1F0B1;
 }
 
 h2 {
     margin: 0;
-    font-size: 5em;
-    font-family: 'Source Sans Pro', sans-serif;
-    color: #D1F0B1;
+    font-family: 'Oswald', sans-serif;
+    color: #1e392a;
+    font-size: 4em;
 }
 
 h3 {
-    font-size: 4em;
-    font-family: 'Source Sans Pro', sans-serif;
-    color: #D1F0B1;
+    font-family: 'Oswald', sans-serif;
+    color: #1e392a;
 }
 
 p, li {
-    font-family: 'Lato', sans-serif;
-    color: #D1F0B1;
-    
+    font-family: 'EB Garamond', serif;
+    color: #1e392a;
+    font-size: 1.6em;
 }
 
 li {
@@ -58,7 +57,7 @@ img {
 
 .panel {
     text-align: center;
-    background-color: #211C1E;
+    background-color: #F2EBE5;
     border-radius: 2em;
     width: 90%;
     margin: 2em auto;
@@ -71,8 +70,8 @@ img {
 }
 
 nav, .nav {
-    background-color: #211C1E;
-    color: #D1F0B1;
+    background-color: #1e392a;
+    color: #fff;
     margin: 0 auto;
     overflow-wrap: break-word;
     width: 100%;
@@ -87,8 +86,13 @@ nav h1, .nav h1 {
     font-size: 4em;
 }
 
-a button {
+a h1, a button {
     text-decoration: none;
+}
+
+#top {
+    text-decoration: none;
+    color: #fff;
 }
 
 button {
