--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ h2 {
     margin: 0;
     font-family: 'Oswald', sans-serif;
     color: #1e392a;
+    font-size: 2.5em;
 }
 
 h3 {
@@ -27,7 +28,7 @@ h3 {
 p, li {
     font-family: 'EB Garamond', serif;
     color: #1e392a;
-    font-size: 1.6em;
+    font-size: 1.3em;
 }
 
 li {
@@ -38,6 +39,11 @@ li {
     text-align: center;
     margin: 0 auto;
     width: 100%;
+}
+
+.caption {
+    text-align: center;
+    margin-top: .2em;
 }
 
 button, .btn {
